# amazing

./: .pre-commit-config.yaml  LICENSE  README.md  SKILL.md  competition.sh  competition_dev.sh  pyproject.toml
src/amazing/: killall.py
src/amazing/game/: __init__.py  cell.py  constants.py  game.py  generator.py  player.py  server.py
src/amazing/network/: __init__.py  client.py  data_handler.py  server.py
src/amazing/viewer/: __init__.py  __main__.py  animation.py  constants.py  fireworks.py  maze.py  player.py  score.py  utils.py  viewer.py  window.py
src/amazing/viewer/resources/: __init__.py
src/amazing/viewer/resources/images/: __init__.py
src/amazinggame/: killall.py
src/amazinggame/game/: constants.py  player.py  server.py
src/amazinggame/network/: data_handler.py
src/amazinggame/viewer/: __main__.py  fireworks.py  player.py  score.py  utils.py  viewer.py  window.py
src/amazinggame/viewer/resources/fonts/: __init__.py
tests/: test_cell.py  test_game_runtime.py  test_generator.py  test_maze.py
