[project]
name = "amazing"
version = "0.1.0"
requires-python = ">=3.14"
readme = "README.md"
authors = [{ name = "Vincent Poulailleau", email = "vpoulailleau@gmail.com" }]
dependencies = ["arcade"]

[project.scripts]
maze-generator = "amazing.game.generator:main"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
omit = []

[tool.ruff]
target-version = "py314"
output-format = "pylint"
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["COM812", "CPY001"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "INP001",  #  Add an `__init__.py`
    "T201",    # Print statements allowed in tests for debugging purposes, and often left in place for future debugging needs
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python = "./.venv"

[tool.uv]
dev-dependencies = ["pytest", "pytest-cov", "ruff", "ty"]
package = true

[tool.pytest.ini_options]
addopts = "-vvv --cov=amazing --cov-report term-missing --cov-report html --cov-branch --cov-config=pyproject.toml --full-trace"
minversion = "8.0"
