[project]
name = "amazinggame"
version = "0.2.1"
requires-python = ">=3.14"
readme = "README.md"
authors = [{ name = "Vincent Poulailleau", email = "vpoulailleau@gmail.com" }]
dependencies = ["arcade", "psutil"]

[project.urls]
Homepage = "https://github.com/vpoulailleau/amazing"

[tool.uv]
dev-dependencies = ["pytest", "pytest-cov", "ruff", "ty"]
package = true

[project.scripts]
maze-generator = "amazinggame.game.generator:main"
server = "amazinggame.game.server:main"
viewer = "amazinggame.viewer.__main__:main"
killall = "amazinggame.killall:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amazinggame"]

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.sdist]
only-include = ["src/amazinggame", "LICENSE", "README.md", "pyproject.toml"]
exclude = [".gitignore"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
omit = [
    "src/amazinggame/game/server.py",
    "src/amazinggame/network/*",
    "src/amazinggame/killall.py",
    "src/amazinggame/viewer/*",
]

[tool.ruff]
target-version = "py314"
output-format = "pylint"
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "TD",     # allow todo while in dev
    "FIX002", # allow todo while in dev
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "INP001",  #  Add an `__init__.py`
    "T201",    # Print statements allowed in tests for debugging purposes, and often left in place for future debugging needs
    "D",       # Docstrings are often not relevant in tests, and can be a burden to maintain, especially for simple test functions.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python = "./.venv"

[tool.pytest.ini_options]
addopts = "-vvv --cov=amazinggame --cov-report term-missing --cov-report html --cov-branch --cov-config=pyproject.toml --full-trace --cov-fail-under=95"
minversion = "8.0"
